--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Copyright 2012 - The CyanogenMod Project
 
-Device configuration for Samsung Galaxy Note (AT&T model).
+Device configuration for Samsung Galaxy Note I Quincytmo.
 
 WORK IN PROGRESS. WILL EAT YOUR CAT.
